--- a/.github/workflows/ci_ubuntu.yaml
+++ b/.github/workflows/ci_ubuntu.yaml
@@ -1,6 +1,11 @@
 name: CI - Ubuntu
 
-on: [pull_request, push]
+on:
+  push:
+    branches:
+      - main
+    paths-ignore:
+      - '.github/workflows/**'
 
 permissions: {}
 
