--- a/.github/workflows/coverity-scan.yaml
+++ b/.github/workflows/coverity-scan.yaml
@@ -1,9 +1,11 @@
 name: Coverity Scan
 
 on:
-  schedule:
-    - cron: '0 0 1 * *' # Monthly (1st day of month at midnight)
-  workflow_dispatch: # Mainly for testing. Don't forget the Coverity usage limits.
+  push:
+    branches:
+      - main
+    paths-ignore:
+      - '.github/workflows/**'
 
 permissions: {}
 
