--- a/.github/workflows/stale_bot.yaml
+++ b/.github/workflows/stale_bot.yaml
@@ -1,8 +1,11 @@
 name: Stale bot
 
 on:
-  schedule:
-    - cron: '0 0 * * *'
+  push:
+    branches:
+      - main
+    paths-ignore:
+      - '.github/workflows/**'
 
 permissions: {}
 
