--- a/.github/workflows/build-qbittorent-windows.yml
+++ b/.github/workflows/build-qbittorent-windows.yml
@@ -4,10 +4,10 @@ on:
   push:
     branches:
       - main # This will trigger the 'ci' job on every commit to the main branch
-    tags: # This will trigger the workflow for releases when a Git tag is pushed
-      - 'v*.*.*' # Matches standard version tags like v1.0.0, v2.3.4
-      - 'v*.*.*-*' # Allows for pre-release tags like v4.6.5-beta1, v5.0.0-rc1
-  # Removed: workflow_dispatch: # Manual triggering is disabled
+    tags: # This will trigger the workflow for releases when a tag is pushed
+      - 'v*.*.*' # Matches tags like v1.0.0, v1.2.3, etc.
+      - 'v*.*.*-*' # Allows for pre-release tags like v4.6.5-beta1
+  # Removed: workflow_dispatch: # Manual triggering is now disabled
 
 permissions: {} # Default permissions
 
@@ -254,8 +254,8 @@ jobs:
     name: Create GitHub Release
     runs-on: ubuntu-latest # Lighter runner for release job
     needs: ci # This job depends on the 'ci' job completing successfully
-    # This condition ensures the release job only runs when a tag is pushed
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') 
+    # Only run this job if the workflow was triggered by a push to a tag
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
     permissions:
       contents: write # Essential permission to create releases
 
