--- a/.github/workflows/build-qbittorent-windows.yml
+++ b/.github/workflows/build-qbittorent-windows.yml
@@ -1,16 +1,9 @@
 name: Build and Release qBittorrent Installer
 
 on:
-  push:
-    tags: # This workflow will now only run when a Git tag (e.g., v1.0.0, v4.6.5) is pushed
-      - 'v*.*.*'
-      - 'v*.*.*-*' # Allows for pre-release tags like v4.6.5-beta1
-  workflow_dispatch: # Keep manual trigger for convenience
+  push:              # Runs on any push to any branch or tag
+  workflow_dispatch: # Allow manual runs
 
-# IMPORTANT: Set default permissions for the entire workflow.
-# This ensures that the GITHUB_TOKEN has the necessary permissions by default.
-# 'contents: write' is crucial for creating and uploading release assets.
-# 'actions: write' is needed for the 'upload-artifact' action.
 permissions:
   contents: write
   actions: write
@@ -21,23 +14,16 @@ concurrency:
 
 jobs:
   ci:
-    name: Build
+    name: Build (libtorrent ${{ matrix.libt_version }})
     runs-on: windows-latest
-    # No need to explicitly set permissions here if already covered by the top-level 'permissions' block,
-    # but keeping 'actions: write' for explicit clarity if needed.
-    permissions:
-      actions: write # Required for upload-artifact
-
     strategy:
       fail-fast: false
       matrix:
         libt_version: ["2.0.11", "1.2.20"]
-
     env:
       boost_path: "${{ github.workspace }}/../boost"
       libtorrent_path: "${{ github.workspace }}/../libtorrent"
       vcpkg_path: "c:/vcpkg"
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -56,7 +42,6 @@ jobs:
           where.exe ninja
           ninja --version
 
-      # https://learn.microsoft.com/en-us/vcpkg/users/binarycaching#gha
       - name: Set variables for vcpkg
         uses: actions/github-script@v7
         with:
@@ -66,31 +51,17 @@ jobs:
 
       - name: Install dependencies with vcpkg
         run: |
-          # create our own triplet
-          New-Item `
-            -Force `
-            -ItemType File `
-            -Path "${{ env.vcpkg_path }}/triplets_overlay/x64-windows-static-md-release.cmake"
-          # OpenSSL isn't compatible with `/guard:cf` flag so we omit it for now, see: https://github.com/openssl/openssl/issues/22554
-          Add-Content `
-            -Path "${{ env.vcpkg_path }}/triplets_overlay/x64-windows-static-md-release.cmake" `
+          New-Item -Force -ItemType File "${{ env.vcpkg_path }}/triplets_overlay/x64-windows-static-md-release.cmake"
+          Add-Content -Path "${{ env.vcpkg_path }}/triplets_overlay/x64-windows-static-md-release.cmake" `
             -Value @("set(VCPKG_TARGET_ARCHITECTURE x64)",
               "set(VCPKG_LIBRARY_LINKAGE static)",
               "set(VCPKG_CRT_LINKAGE dynamic)",
               "set(VCPKG_BUILD_TYPE release)")
-          # clear buildtrees after each package installation to reduce disk space requirements
-          $packages = `
-            "boost-build:x64-windows-static-md-release",
+          $packages = "boost-build:x64-windows-static-md-release",
             "openssl:x64-windows-static-md-release",
             "zlib:x64-windows-static-md-release"
-          ${{ env.vcpkg_path }}/vcpkg.exe upgrade `
-            --no-dry-run `
-            --overlay-triplets="${{ env.vcpkg_path }}/triplets_overlay"
-          ${{ env.vcpkg_path }}/vcpkg.exe install `
-            --binarysource="clear;x-gha,readwrite" `
-            --clean-after-build `
-            --overlay-triplets="${{ env.vcpkg_path }}/triplets_overlay" `
-            $packages
+          ${{ env.vcpkg_path }}/vcpkg.exe upgrade --no-dry-run --overlay-triplets="${{ env.vcpkg_path }}/triplets_overlay"
+          ${{ env.vcpkg_path }}/vcpkg.exe install --binarysource="clear;x-gha,readwrite" --clean-after-build --overlay-triplets="${{ env.vcpkg_path }}/triplets_overlay" $packages
 
       - name: Install boost
         env:
@@ -109,12 +80,7 @@ jobs:
           }
           move "${{ github.workspace }}/../boost_*" "${{ env.boost_path }}"
           cd "${{ env.boost_path }}"
-          #.\bootstrap.bat
-          ${{ env.vcpkg_path }}/installed/x64-windows-static-md-release/tools/boost-build/b2.exe `
-            stage `
-            toolset=msvc `
-            --stagedir=.\ `
-            --with-headers
+          ${{ env.vcpkg_path }}/installed/x64-windows-static-md-release/tools/boost-build/b2.exe stage toolset=msvc --stagedir=.\ --with-headers
 
       - name: Install Qt
         uses: jurplel/install-qt-action@v4
@@ -126,53 +92,24 @@ jobs:
 
       - name: Install libtorrent
         run: |
-          git clone `
-            --branch v${{ matrix.libt_version }} `
-            --depth 1 `
-            --recurse-submodules `
-            https://github.com/arvidn/libtorrent.git `
-            ${{ env.libtorrent_path }}
+          git clone --branch v${{ matrix.libt_version }} --depth 1 --recurse-submodules https://github.com/arvidn/libtorrent.git ${{ env.libtorrent_path }}
           cd ${{ env.libtorrent_path }}
           $env:CXXFLAGS+=" /guard:cf"
           $env:LDFLAGS+=" /guard:cf"
-          cmake `
-            -B build `
-            -G "Ninja" `
-            -DCMAKE_BUILD_TYPE=RelWithDebInfo `
-            -DCMAKE_CXX_STANDARD=20 `
-            -DCMAKE_EXPORT_COMPILE_COMMANDS=ON `
-            -DCMAKE_INSTALL_PREFIX="${{ env.libtorrent_path }}/install" `
-            -DCMAKE_TOOLCHAIN_FILE="${{ env.vcpkg_path }}/scripts/buildsystems/vcpkg.cmake" `
-            -DBOOST_ROOT="${{ env.boost_path }}/lib/cmake" `
-            -DBUILD_SHARED_LIBS=OFF `
-            -Ddeprecated-functions=OFF `
-            -Dstatic_runtime=OFF `
-            -DVCPKG_TARGET_TRIPLET=x64-windows-static-md-release
+          cmake -B build -G "Ninja" -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCMAKE_CXX_STANDARD=20 -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCMAKE_INSTALL_PREFIX="${{ env.libtorrent_path }}/install" -DCMAKE_TOOLCHAIN_FILE="${{ env.vcpkg_path }}/scripts/buildsystems/vcpkg.cmake" -DBOOST_ROOT="${{ env.boost_path }}/lib/cmake" -DBUILD_SHARED_LIBS=OFF -Ddeprecated-functions=OFF -Dstatic_runtime=OFF -DVCPKG_TARGET_TRIPLET=x64-windows-static-md-release
           cmake --build build
           cmake --install build
 
       - name: Build qBittorrent
         run: |
           $env:CXXFLAGS+="/DQT_FORCE_ASSERTS /WX"
-          cmake `
-            -B build `
-            -G "Ninja" `
-            -DCMAKE_BUILD_TYPE=RelWithDebInfo `
-            -DCMAKE_EXPORT_COMPILE_COMMANDS=ON `
-            -DCMAKE_TOOLCHAIN_FILE="${{ env.vcpkg_path }}/scripts/buildsystems/vcpkg.cmake" `
-            -DBOOST_ROOT="${{ env.boost_path }}/lib/cmake" `
-            -DLibtorrentRasterbar_DIR="${{ env.libtorrent_path }}/install/lib/cmake/LibtorrentRasterbar" `
-            -DMSVC_RUNTIME_DYNAMIC=ON `
-            -DTESTING=ON `
-            -DVCPKG_TARGET_TRIPLET=x64-windows-static-md-release `
-            -DVERBOSE_CONFIGURE=ON `
-            --graphviz=build/target_graph.dot
+          cmake -B build -G "Ninja" -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCMAKE_TOOLCHAIN_FILE="${{ env.vcpkg_path }}/scripts/buildsystems/vcpkg.cmake" -DBOOST_ROOT="${{ env.boost_path }}/lib/cmake" -DLibtorrentRasterbar_DIR="${{ env.libtorrent_path }}/install/lib/cmake/LibtorrentRasterbar" -DMSVC_RUNTIME_DYNAMIC=ON -DTESTING=ON -DVCPKG_TARGET_TRIPLET=x64-windows-static-md-release -DVERBOSE_CONFIGURE=ON --graphviz=build/target_graph.dot
           cmake --build build --target qbt_update_translations
           cmake --build build
           cmake --build build --target check
 
       - name: Prepare build artifacts (Portable Zip & Installer)
-        id: prepare_artifacts # Add an ID to easily access output variables from this step
+        id: prepare_artifacts
         run: |
           $buildDir = "upload/qBittorrent"
           mkdir $buildDir
@@ -201,13 +138,11 @@ jobs:
           mkdir "$buildDir/plugins/tls"
           copy "${{ env.Qt_ROOT_DIR }}/plugins/tls/qschannelbackend.dll" "$buildDir/plugins/tls"
           
-          # Get qBittorrent app version to name the portable zip
           $qbtAppVersion = (Get-Item "build/qbittorrent.exe").VersionInfo.ProductVersion
           $portableZipName = "qBittorrent_Portable_win_x64_v${qbtAppVersion}_libt_${{ matrix.libt_version }}.zip"
           Compress-Archive -Path $buildDir -DestinationPath "upload/$portableZipName" -Force
-          echo "portableZipName=$portableZipName" >> $env:GITHUB_OUTPUT # Make portableZipName available to subsequent steps
+          echo "portableZipName=$portableZipName" >> $env:GITHUB_OUTPUT
 
-          # cmake additionals (if these are also meant for release, keep them)
           mkdir upload/cmake
           copy build/compile_commands.json upload/cmake
           copy build/target_graph.dot upload/cmake
@@ -220,55 +155,47 @@ jobs:
           makensis /DQBT_DIST_DIR="../../upload/qBittorrent" /WX dist/windows/qbittorrent.nsi
 
       - name: Rename installer with Libtorrent version
-        shell: pwsh # Use PowerShell Core
-        id: rename_installer_with_libtorrent_version # Add an ID to access output variables from this step
+        shell: pwsh
+        id: rename_installer_with_libtorrent_version
         run: |
           $installerFile = Get-ChildItem -Path "dist/windows" -Filter "qbittorrent_*.exe" | Select-Object -First 1
           if ($null -ne $installerFile) {
               $originalFileName = $installerFile.BaseName
               $extension = $installerFile.Extension
-
-              # Attempt to extract the qBittorrent version part from the original filename.
-              # This regex will capture the part up to the version number, including the 'v'.
               $match = $originalFileName -match '^(qbittorrent_win_x64_v\d+\.\d+\.\d+(\.\d+)?)(_.*)?$'
               $qbtBaseName = if ($match) { $Matches[1] } else { $originalFileName }
-
-              # Construct the new filename including the libtorrent version
               $newInstallerFileName = "${qbtBaseName}_libt_${{ matrix.libt_version }}${extension}"
               $newFullPath = Join-Path -Path $installerFile.DirectoryName -ChildPath $newInstallerFileName
-              
               Rename-Item -Path $installerFile.FullName -NewName $newFullPath -Force
               Write-Host "Successfully renamed installer to: $($newInstallerFileName)"
-              echo "newInstallerFileName=$newInstallerFileName" >> $env:GITHUB_OUTPUT # Make newInstallerFileName available
+              echo "newInstallerFileName=$newInstallerFileName" >> $env:GITHUB_OUTPUT
           } else {
               Write-Warning "No qBittorrent installer file found to rename. Please check the 'Create installer' step output."
-              exit 1 # Fail the step if the installer wasn't found
+              exit 1
           }
 
       - name: Upload all build assets for release
         uses: actions/upload-artifact@v4
         with:
-          # Each matrix combination will upload a single artifact package containing its specific installer and portable zip
           name: qBittorrent-Build-Assets-libt-${{ matrix.libt_version }}
           path: |
-            upload/${{ steps.prepare_artifacts.outputs.portableZipName }} # Portable zip from prepare_artifacts step
-            dist/windows/${{ steps.rename_installer_with_libtorrent_version.outputs.newInstallerFileName }} # Renamed installer from rename step
-            # If you want to include cmake debug files in the release too:
-            # upload/cmake/
-          retention-days: 7 # Optional: Set retention for debugging artifacts
+            upload/${{ steps.prepare_artifacts.outputs.portableZipName }}
+            dist/windows/${{ steps.rename_installer_with_libtorrent_version.outputs.newInstallerFileName }}
+          retention-days: 7
 
----
+      - name: Lint workflow YAML (optional)
+        # This does NOT fail the build if yamllint is not present or workflow is not in the root
+        run: |
+          pip install yamllint || true
+          yamllint .github/workflows/*.yml || true
 
   release:
     name: Create GitHub Release
-    runs-on: ubuntu-latest # Lighter runner for release job
-    needs: ci # This job depends on the 'ci' job completing successfully
-    # Permissions for this job. 'contents: write' is paramount for creating releases.
-    permissions:
-      contents: write
-
+    runs-on: ubuntu-latest
+    needs: ci
+    if: startsWith(github.ref, 'refs/tags/')
     steps:
-      - name: Checkout repository # Needed by softprops/action-gh-release to get tag info etc.
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Create downloaded_artifacts directory
@@ -277,20 +204,14 @@ jobs:
       - name: Download all build artifacts
         uses: actions/download-artifact@v4
         with:
-          path: downloaded_artifacts # All artifacts from both matrix jobs will be downloaded here into subdirectories
+          path: downloaded_artifacts
 
       - name: Collect release assets
         id: collect_assets
         run: |
-          mkdir -p release_assets # Ensure the directory exists
-          # Find all .exe and .zip files generated by the CI job and move them to release_assets
-          # The -mindepth 2 option ensures the 'find' command searches within the subdirectories
-          # created by 'download-artifact' for each matrix artifact.
-          # We use -name 'qbittorrent_*.exe' and 'qBittorrent_Portable_*.zip' to match the renamed files.
+          mkdir -p release_assets
           find downloaded_artifacts -mindepth 2 -type f -name 'qbittorrent_*.exe' -exec mv {} release_assets/ \;
           find downloaded_artifacts -mindepth 2 -type f -name 'qBittorrent_Portable_*.zip' -exec mv {} release_assets/ \;
-          
-          # IMPORTANT: Verify files are present before release
           echo "--- Collected Assets for Release ---"
           ls -l release_assets/
           if [ -z "$(ls -A release_assets/)" ]; then
@@ -301,11 +222,11 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This is automatically provided by GitHub Actions
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          files: release_assets/* # Attach all files in the 'release_assets' directory
-          tag_name: ${{ github.ref_name }} # Uses the pushed tag name (e.g., v1.0.0)
-          name: Release ${{ github.ref_name }} # Name of the release
+          files: release_assets/*
+          tag_name: ${{ github.ref_name }}
+          name: Release ${{ github.ref_name }}
           body: |
             ## qBittorrent Release ${{ github.ref_name }}
 
@@ -318,5 +239,5 @@ jobs:
             * **Portable versions** (e.g., `qBittorrent_Portable_win_x64_v<qbt_version>_libt_2.0.11.zip`)
 
             For more detailed changes, please refer to the commit history.
-          draft: false # Set to true if you want to create a draft release first
-          prerelease: false # Set to true for pre-release versions (e.g., v1.0.0-beta)
+          draft: false
+          prerelease: false
