--- a/.github/workflows/build-qbittorent-windows.yml
+++ b/.github/workflows/build-qbittorent-windows.yml
@@ -6,7 +6,6 @@ on:
 
 permissions:
   contents: write
-  actions: write
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -37,33 +36,20 @@ jobs:
         run: |
           if ((Get-Command "ninja.exe" -ErrorAction SilentlyContinue) -eq $null)
           {
-             choco install ninja
+            choco install ninja
           }
           where.exe ninja
           ninja --version
 
-      - name: Set variables for vcpkg
-        uses: actions/github-script@v7
+      - name: Cache Boost
+        id: cache-boost
+        uses: actions/cache@v4
         with:
-          script: |
-            core.exportVariable('ACTIONS_CACHE_URL', (process.env.ACTIONS_CACHE_URL || ''));
-            core.exportVariable('ACTIONS_RUNTIME_TOKEN', (process.env.ACTIONS_RUNTIME_TOKEN || ''));
+          path: ../boost
+          key: boost-1.86.0
 
-      - name: Install dependencies with vcpkg
-        run: |
-          New-Item -Force -ItemType File "${{ env.vcpkg_path }}/triplets_overlay/x64-windows-static-md-release.cmake"
-          Add-Content -Path "${{ env.vcpkg_path }}/triplets_overlay/x64-windows-static-md-release.cmake" `
-            -Value @("set(VCPKG_TARGET_ARCHITECTURE x64)",
-              "set(VCPKG_LIBRARY_LINKAGE static)",
-              "set(VCPKG_CRT_LINKAGE dynamic)",
-              "set(VCPKG_BUILD_TYPE release)")
-          $packages = "boost-build:x64-windows-static-md-release",
-            "openssl:x64-windows-static-md-release",
-            "zlib:x64-windows-static-md-release"
-          ${{ env.vcpkg_path }}/vcpkg.exe upgrade --no-dry-run --overlay-triplets="${{ env.vcpkg_path }}/triplets_overlay"
-          ${{ env.vcpkg_path }}/vcpkg.exe install --binarysource="clear;x-gha,readwrite" --clean-after-build --overlay-triplets="${{ env.vcpkg_path }}/triplets_overlay" $packages
-
-      - name: Install boost
+      - name: Download and Install Boost (if not cached)
+        if: steps.cache-boost.outputs.cache-hit != 'true'
         env:
           BOOST_MAJOR_VERSION: "1"
           BOOST_MINOR_VERSION: "86"
@@ -80,10 +66,26 @@ jobs:
           }
           move "${{ github.workspace }}/../boost_*" "${{ env.boost_path }}"
           cd "${{ env.boost_path }}"
-          ${{ env.vcpkg_path }}/installed/x64-windows-static-md-release/tools/boost-build/b2.exe stage toolset=msvc --stagedir=.\ --with-headers
+          mkdir -Force lib
+          # Build only headers (needed for vcpkg/libtorrent)
+          if (Test-Path "${{ env.vcpkg_path }}/installed/x64-windows-static-md-release/tools/boost-build/b2.exe") {
+            ${{ env.vcpkg_path }}/installed/x64-windows-static-md-release/tools/boost-build/b2.exe stage toolset=msvc --stagedir=.\ --with-headers
+          }
+
+      - name: Install dependencies with vcpkg
+        run: |
+          New-Item -Force -ItemType Directory "${{ env.vcpkg_path }}/triplets_overlay" | Out-Null
+          Set-Content -Path "${{ env.vcpkg_path }}/triplets_overlay/x64-windows-static-md-release.cmake" -Value @"
+set(VCPKG_TARGET_ARCHITECTURE x64)
+set(VCPKG_LIBRARY_LINKAGE static)
+set(VCPKG_CRT_LINKAGE dynamic)
+set(VCPKG_BUILD_TYPE release)
+"@
+          $packages = "boost-build:x64-windows-static-md-release", "openssl:x64-windows-static-md-release", "zlib:x64-windows-static-md-release"
+          ${{ env.vcpkg_path }}/vcpkg.exe install --binarysource="clear;x-gha,readwrite" --clean-after-build --overlay-triplets="${{ env.vcpkg_path }}/triplets_overlay" $packages
 
       - name: Install Qt
-        uses: jurplel/install-qt-action@v4
+        uses: jurplel/install-qt-action@v4.0.1
         with:
           version: "6.9.0"
           arch: win64_msvc2022_64
@@ -152,7 +154,7 @@ jobs:
       - name: Create installer
         run: |
           7z x -o"dist/windows/" "dist/windows/NSISPlugins.zip"
-          makensis /DQBT_DIST_DIR="../../upload/qBittorrent" /WX dist/windows/qbittorrent.nsi
+          makensis /DQBT_DIST_DIR="../../upload/QBittorrent" /WX dist/windows/qbittorrent.nsi
 
       - name: Rename installer with Libtorrent version
         shell: pwsh
@@ -183,17 +185,10 @@ jobs:
             dist/windows/${{ steps.rename_installer_with_libtorrent_version.outputs.newInstallerFileName }}
           retention-days: 7
 
-      - name: Lint workflow YAML (optional)
-        # This does NOT fail the build if yamllint is not present or workflow is not in the root
-        run: |
-          pip install yamllint || true
-          yamllint .github/workflows/*.yml || true
-
   release:
     name: Create GitHub Release
     runs-on: ubuntu-latest
     needs: ci
-    if: startsWith(github.ref, 'refs/tags/')
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -219,16 +214,27 @@ jobs:
             exit 1
           fi
 
+      - name: Set release tag and type
+        id: vars
+        run: |
+          if [[ "${GITHUB_REF}" == refs/tags/* ]]; then
+            echo "release_tag=${GITHUB_REF#refs/tags/}" >> "$GITHUB_OUTPUT"
+            echo "is_tag=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "release_tag=${GITHUB_REF##*/}-run-${GITHUB_RUN_ID}" >> "$GITHUB_OUTPUT"
+            echo "is_tag=false" >> "$GITHUB_OUTPUT"
+          fi
+
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           files: release_assets/*
-          tag_name: ${{ github.ref_name }}
-          name: Release ${{ github.ref_name }}
+          tag_name: ${{ steps.vars.outputs.release_tag }}
+          name: Release ${{ steps.vars.outputs.release_tag }}
           body: |
-            ## qBittorrent Release ${{ github.ref_name }}
+            ## qBittorrent Release ${{ steps.vars.outputs.release_tag }}
 
             This release includes Windows x64 builds with the following libtorrent versions:
             * **2.0.11**
@@ -240,4 +246,14 @@ jobs:
 
             For more detailed changes, please refer to the commit history.
           draft: false
-          prerelease: false
+          prerelease: ${{ steps.vars.outputs.is_tag == 'false' }}
+
+  lint-yaml:
+    name: Lint workflow YAML (optional)
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install yamllint
+        run: pip install yamllint
+      - name: Lint workflows
+        run: yamllint .github/workflows/*.yml || true
